--- a/oxanh/assets/css/responsive.css
+++ b/oxanh/assets/css/responsive.css
@@ -428,24 +428,28 @@
   }
 
   .account-menu-list {
-    display: flex;
+    /* display: flex;
     flex-wrap: nowrap;
     margin: 0 -5px;
     padding: 0;
-    overflow-x: scroll;
+    overflow-x: scroll; */
+    height: 146px;
+    overflow: visible;
   }
 
   .account-menu-list li {
-    padding: 0 5px;
+    /* padding: 0 5px;
     width: 100%;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: center; */
+    height: calc((100% - 30px) / 2) !important;
+
   }
 
   .account-menu-list li a {
-    width: 110px;
-    height: 55px;
+    /* width: 110px; */
+    height: 100%;
     display: flex;
     margin-bottom: 10px;
     border-radius: 8px !important;
