--- a/oxanh/assets/css/responsive.css
+++ b/oxanh/assets/css/responsive.css
@@ -99,14 +99,14 @@
   margin-right: 44px;
 }
 
-.nav-ỉtem-form {
+.nav-á»‰tem-form {
   position: absolute !important;
   bottom: 0;
   width: 100%;
   text-align: center;
 }
 
-.nav-ỉtem-form .ci-menu-link {
+.nav-á»‰tem-form .ci-menu-link {
   justify-content: center;
 }
 
@@ -428,27 +428,39 @@
   }
 
   .account-menu-list {
-    /* display: flex;
+    display: flex;
     flex-wrap: nowrap;
     margin: 0 -5px;
     padding: 0;
-    overflow-x: scroll; */
+    overflow-x: scroll;
+  }
+
+  .swiper.account-menu-list {
+    display: block;
     height: 146px;
     overflow: visible;
   }
 
-  .account-menu-list li {
-    /* padding: 0 5px;
+  .account-menu-list:not(.swiper) li {
+    padding: 0 5px;
     width: 100%;
     display: flex;
     flex-direction: row;
-    align-items: center; */
-    height: calc((100% - 30px) / 2) !important;
+    align-items: center;
 
   }
 
+  .account-menu-lis.swiper li {
+    height: calc((100% - 30px) / 2) !important;
+  }
+
+  .account-menu-list:not(.swiper) li a {
+    width: 110px;
+    height: 55px;
+  }
+
   .account-menu-list li a {
-    /* width: 110px; */
+
     height: 100%;
     display: flex;
     margin-bottom: 10px;
