--- a/oxanh/assets/css/style.css
+++ b/oxanh/assets/css/style.css
@@ -5274,21 +5274,36 @@ Flaticon icon font: Flaticon
 }
 
 .sp-tabs .nav-tabs li button {
+  position: relative;
   display: inline-block;
   font-weight: 500;
-  padding: 10px 0;
+  padding: 10px 15px;
+  margin: 0 8px;
   font-size: 15px;
   color: #000;
-  margin: 0 15px;
   font-weight: 500;
   border: 0;
 }
 
+.sp-tabs .nav-tabs li button:hover {
+  background-color: rgba(68, 71, 70, 0.059);
+}
+
+.sp-tabs .nav-tabs li button.active:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 3px;
+  width: 100%;
+  background-color: var(--main-color);
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+}
+
 .sp-tabs .nav-tabs li button.active {
   color: var(--main-color);
-  background-color: #fff;
   border: 0;
-  border-bottom: 3px solid var(--main-color);
 }
 
 .sp-tabs .tab-content {
@@ -6569,8 +6584,8 @@ Flaticon icon font: Flaticon
   inset: -0.625rem;
   border-radius: 20px;
   background-color: rgb(249 250 251 /1);
-  box-shadow: 0 0 var(--spacing--m) #e6e6e6;
-
+  box-shadow: 0 0 1px 1px #e6e6e6;
+  vertical-align: ;
 }
 
 .ho-so-wrap>* {
@@ -6597,7 +6612,26 @@ Flaticon icon font: Flaticon
 }
 
 @media (max-width: 767px) {
-  .ho-so { 
+  .ho-so {
     width: 100%;
   }
+}
+
+.anh-hs-img {
+  text-align: center;
+}
+
+.anh-hs-img a {
+  display: block;
+  width: 100%;
+  height: 200px;
+  cursor: zoom-in;
+}
+
+.anh-hs-img img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+
 }
