--- a/oxanh/assets/css/style.css
+++ b/oxanh/assets/css/style.css
@@ -6635,3 +6635,272 @@ Flaticon icon font: Flaticon
   object-fit: contain;
 
 }
+
+/* --------------------------------NEWSFEED------------------------------ */
+
+.gray-bg {
+  float: left;
+  width: 100%;
+  background: #f4f2f2;
+}
+
+.gap {
+  float: left;
+  padding: 30px 0;
+  position: relative;
+  width: 100%;
+}
+
+#page-contents {
+  position: relative;
+}
+
+.static, .static>div {
+  position: static !important;
+}
+
+/*-- widgets ---*/
+.sidebar {
+  display: table;
+  float: none;
+  margin: 0 auto;
+  padding-bottom: 20px;
+  width: 100%;
+}
+
+.sidebar .widget {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  margin-bottom: 18px;
+  background: #fdfdfd;
+  border: 1px solid #ede9e9;
+  border-radius: 5px;
+}
+
+.sidebar .widget:last-child {
+  margin-bottom: 0;
+}
+
+.sidebar .widget>ul {
+  display: inline-block;
+  list-style: outside none none;
+  margin-bottom: 0;
+  padding: 0 25px 20px;
+  width: 100%;
+}
+
+.sidebar .widget-title {
+  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+  color: #424242;
+  display: inline-block;
+  font-size: 15px;
+  font-weight: 500;
+  margin-bottom: 30px;
+  padding: 20px 20px 10px;
+  position: relative;
+  text-transform: capitalize;
+  width: 100%;
+}
+
+.sidebar .widget-title::before {
+  bottom: 0;
+  content: "";
+  height: 2px;
+  left: 20px;
+  position: absolute;
+  width: 20%;
+}
+
+.sidebar .widget li {
+  display: inline-block;
+  margin-bottom: 20px;
+  position: relative;
+  width: 100%;
+}
+
+.sidebar .widget li:last-child {
+  margin-bottom: 0;
+}
+
+.sidebar .widget li i {
+  color: #999;
+  display: inline-block;
+  font-size: 11px;
+  margin-right: 5px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+
+.sidebar .widget li>a {
+  font-size: 14px;
+  text-transform: capitalize;
+  display: inline-block;
+  position: relative;
+  font-weight: 400;
+  color: #797979;
+  vertical-align: top;
+}
+
+.sidebar .widget li>a i {
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  color: #fff;
+  font-size: 25px;
+}
+
+.sidebar .widget ul.naves li i {
+  display: inline-block;
+  font-size: 16px;
+  vertical-align: baseline;
+}
+
+.sidebar .widget ul.recent-photos li {
+  float: left;
+  margin-bottom: 5px;
+  margin-left: 2.5px;
+  margin-right: 2.5px;
+  width: 31%;
+}
+
+.widget ul.recent-photos {
+  display: inline-block;
+  padding-bottom: 20px;
+  width: 100%;
+}
+
+.widget ul.recent-photos li a i {
+  overflow: unset;
+}
+
+/*-- short profile widget ---*/
+
+.short-profile li span {
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 500;
+  margin-bottom: 5px;
+  text-transform: capitalize;
+  width: 100%;
+}
+
+.short-profile>li {
+  border-bottom: 1px solid #eaeaea;
+}
+
+.short-profile>li:last-child {
+  border-bottom: 0 none;
+}
+
+
+/*--- social widget ---*/
+
+.widget .socials>li {
+  margin-bottom: 10px;
+}
+
+.socials>li a {
+  color: #fff;
+  padding: 3px 10px;
+  width: 100%;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, .4);
+}
+
+.socials>li a i {
+  color: #333;
+  float: left;
+}
+
+li.facebook {
+  background: #2f5b9d;
+}
+
+li.twitter {
+  background: #38bff1;
+}
+
+li.google {
+  background: #f24756;
+}
+
+.socials>li a span {
+  font-size: 13px;
+  color: #fff;
+}
+
+.socials>li a ins {
+  float: right;
+  font-size: 12px;
+  margin-top: 4px;
+  text-decoration: none;
+  color: #fff;
+}
+
+.socials>li a:hover {
+  color: #fff !important;
+}
+
+
+/*--- twitter feed widget ---*/
+
+.twiter-feed {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  max-height: 395px;
+}
+
+.twiter-feed>li>i,
+.twiter-feed>li span {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.twiter-feed>li>span {
+  color: #999;
+  font-size: 12px;
+  vertical-align: top;
+  width: 82%;
+}
+
+.widget .twiter-feed>li>i {
+  color: #38bff1;
+  font-size: 20px;
+  width: 20px;
+}
+
+.widget .twiter-feed>li>span i {
+  color: #545454;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  text-transform: capitalize;
+  width: 100%;
+}
+
+.widget .twiter-feed>li>em {
+  color: #b8b8b8;
+  font-size: 12px;
+  font-style: normal;
+  text-transform: capitalize;
+}
+
+.twiter-feed>li p,
+.short-profile li p {
+  color: #888888;
+  line-height: 23px;
+  margin-top: 8px;
+  font-size: 14px;
+}
+
+.short-profile li p {
+  margin-top: 0;
+}
+
+.twiter-feed>li p a {
+  font-size: 12px;
+}
