--- a/oxanh/assets/css/style.css
+++ b/oxanh/assets/css/style.css
@@ -6905,3 +6905,149 @@ li.google {
 .twiter-feed>li p a {
   font-size: 12px;
 }
+
+.central-meta {
+  background: #fdfdfd none repeat scroll 0 0;
+  border: 1px solid #ede9e9;
+  border-radius: 5px;
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 17px;
+  padding: 25px;
+}
+
+.new-postbox {
+  display: inline-block;
+  width: 100%;
+}
+
+.new-postbox > figure {
+  display: inline-block;
+  margin-bottom: 0;
+  vertical-align: top;
+  width: 10.4%;
+}
+
+.newpst-input {
+  display: inline-block;
+  margin-left: 10px;
+  vertical-align: top;
+  width: 85.5%;
+}
+
+.newpst-input > form {
+  display: inline-block;
+  width: 100%;
+}
+.newpst-input textarea {
+  float: left;
+  width: 100%;
+}
+.attachments {
+  border: 1px solid #eee;
+  display: block;
+  padding: 10px;
+  text-align: right;
+  border-top: 0;
+  background: #fff;
+}
+
+.attachments > ul {
+  list-style: outside none none;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+.attachments li {
+  display: inline-block;
+  margin-left: 5px;
+}
+
+textarea {
+  border: 1px solid #eeeeee;
+  border-radius: 6px 6px 0 0;
+  padding: 10px;
+  width: 100%;
+  border-bottom: 0;
+}
+
+form button {
+  border: medium none;
+  color: #fff;
+  font-size: 13px;
+  font-weight: 500;
+  padding: 4px 20px;
+  border-radius: 4px;
+}
+
+.attachments .fileContainer [type="file"] {
+  right: 6px;
+  top: -18px;
+  width: 20px;
+}
+
+.friend-info {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+}
+
+.friend-info > figure {
+  display: inline-block;
+  margin-bottom: 0;
+  vertical-align: middle;
+  width: 8%;
+}
+
+.friend-name {
+  display: inline-block;
+  padding-left: 10px;
+  vertical-align: middle;
+  width: 90%;
+}
+
+.friend-name > ins {
+  float: left;
+  font-weight: 500;
+  width: 100%;
+  font-size: 14.5px;
+  text-decoration: none;
+}
+
+.friend-name > span {
+  color: #999;
+  float: left;
+  font-size: 12px;
+  text-transform: capitalize;
+  width: 100%;
+}
+
+.post-meta {
+  float: left;
+  margin-top: 15px;
+  width: 100%;
+}
+
+.post-meta > img {
+  float: left;
+  width: 100%;
+}
+
+.description {
+  float: left;
+  margin-top: 12px;
+  width: 100%;
+}
+
+.description > p {
+  margin-bottom: 20px;
+}
+
+.description > span {
+  color: #424242;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 28px;
+  display: inline-block;
+  margin-bottom: 5px;
+}
