--- a/oxanh/assets/css/style.css
+++ b/oxanh/assets/css/style.css
@@ -7088,7 +7088,7 @@ li.google {
   width: 100%;
 }
 
-.profile-thumb{
+.profile-thumb {
   display: inline-block;
   margin-bottom: 0;
   vertical-align: middle;
@@ -7130,18 +7130,18 @@ li.google {
   width: 100%;
 }
 
-.user-post-desc{
+.user-post-desc {
   font-size: 14px;
   line-height: 26px;
   color: #8c8b8b;
 }
 
-.user-post-thumb{
+.user-post-thumb {
   float: left;
   width: 100%;
 }
 
-.user-post-meta-button{
+.user-post-meta-button {
   border: none;
   outline: none;
   background: none;
@@ -7162,7 +7162,7 @@ li.google {
 
 @media only screen and (max-width: 479.98px) {
   .user-post-meta .user-post-meta-like span {
-      display: none;
+    display: none;
   }
 }
 
@@ -7176,7 +7176,7 @@ li.google {
 
 @media only screen and (max-width: 479.98px) {
   .user-post-meta .user-post-meta-like strong {
-      display: inline-block;
+    display: inline-block;
   }
 }
 
@@ -7218,11 +7218,49 @@ li.google {
   color: #dc4734;
 }
 
-.plyr--video {
-  border-radius: 5px;
+/*--- load more ---*/
+
+.lodmore {
+  display: inline-block;
+  width: 100%;
 }
 
-.plyr__control--overlaid {
-  opacity: 0;
-  visibility: hidden;
+.btn-view.btn-load-more {
+  background: #fff;
+  border: medium none;
+  border-radius: 100%;
+  color: transparent;
+  display: block;
+  height: 50px;
+  margin: 30px auto 0;
+  position: relative;
+  width: 50px;
+  transition: all 0.2s linear 0s;
+  z-index: 77;
+  -ms-box-shadow: 0px 5px 10px rgba(0, 0, 0, .2);
+  -moz-box-shadow: 0px 5px 10px rgba(0, 0, 0, .2);
+  -o-box-shadow: 0px 5px 10px rgba(0, 0, 0, .2);
+  -webkit-box-shadow: 0px 5px 10px rgba(0, 0, 0, .2);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, .2);
+}
+
+.central-meta button.btn-view {
+  background: #f1f1f1;
+}
+
+.btn-view.btn-load-more::before {
+  color: #333;
+  content: "\f01e";
+  font-family: fontawesome;
+  left: 50%;
+  opacity: 1;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%) rotate(0deg);
+  z-index: 111;
+  transition: all 0.2s linear 0s;
+}
+
+.btn-view.btn-load-more:hover::before {
+  transform: translate(-50%, -50%) rotate(360deg);
 }
