--- a/oxanh/assets/css/style.css
+++ b/oxanh/assets/css/style.css
@@ -105,8 +105,7 @@ Tags:
   --g01-bg-color: #1f7fc1;
   --g02-bg-color: #43bb8b;
   --g03-bg-color: #cd952b;
-  --g04-bg-color: #cd952b;
-  --g05-bg-color: #bb4343;
+  --g04-bg-color: #bb4343;
 
   /* typography */
   --font-family-sans-serif: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
@@ -1091,6 +1090,7 @@ a:hover {
 .g03-bg-color {
   background-color: var(--g03-bg-color);
 }
+
 .g04-bg-color {
   background-color: var(--g04-bg-color);
 }
@@ -1108,7 +1108,7 @@ a:hover {
 }
 
 .ci-package-item:nth-of-type(4) .ci-package-item__top {
-  background-color: red;
+  background-color: var(--g04-bg-color);
 }
 
 .ci-package-item:hover {
