--- a/oxanh/assets/css/style.css
+++ b/oxanh/assets/css/style.css
@@ -5774,7 +5774,7 @@ Flaticon icon font: Flaticon
 .table-style tr td,
 .table-style tr th,
 .table-style tr td {
-  padding: 10px 20px;
+  padding: 10px;
   box-shadow: none;
   border: none;
   border-left: 1px solid #fff;
